--- a/frontend/src/components/RecipeCard.css
+++ b/frontend/src/components/RecipeCard.css
@@ -40,7 +40,7 @@
   padding: 10px;
   border-radius: 5px;
   border: none;
-  background-color: #28a745;
+  background-color: #65b41a;
   color: white;
   font-weight: bold;
   cursor: pointer;
@@ -62,7 +62,7 @@
   display: inline-block;
   margin-top: auto;
   padding: 10px 15px;
-  background-color: #007bff;
+  background-color: #f39c12;
   color: white;
   text-decoration: none;
   border-radius: 5px;
